--- a/default/app.conf
+++ b/default/app.conf
@@ -1,16 +1,16 @@
 [install]
 state = enabled
 is_configured = 0
-build = 2017.12.11.release
+build = 2017.12.12.release20
 
 [ui]
 is_visible = false
-label = App for using MISP in Splunk
+label = TA-MISP 42 Splunk
 
 [launcher]
 author = Remi Seguy & Xavier Mertens
 description = App for using MISP IOCs in Splunk saved earches 
-version = 2017.12.11.release
+version = 2017.12.12.release20
 
 [package]
 check_for_updates = false
