--- a/default/commands.conf
+++ b/default/commands.conf
@@ -1,5 +1,7 @@
 [mispgetioc]
 filename = mispgetioc.py
+local = true
+chunked = true
 enableheader = true
 outputheader = true
 requires_srinfo = true
