--- a/default/app.conf
+++ b/default/app.conf
@@ -2,6 +2,7 @@
 state = enabled
 is_configured = 0
 build = 2017.12.12.release20
+install_source_checksum = 475a08f19fe39ae14d1c7ce7e62f474656ec323e
 
 [ui]
 is_visible = false
@@ -9,7 +10,7 @@ label = TA-MISP 42 Splunk
 
 [launcher]
 author = Remi Seguy & Xavier Mertens
-description = App for using MISP IOCs in Splunk saved earches 
+description = App for using MISP IOCs in Splunk saved earches
 version = 2017.12.12.release20
 
 [package]
