--- a/default/app.conf
+++ b/default/app.conf
@@ -1,17 +1,16 @@
 [install]
 state = enabled
 is_configured = 0
-build = 2017.12.12.release20
-install_source_checksum = 475a08f19fe39ae14d1c7ce7e62f474656ec323e
+build = 2017.12.18.release21
 
 [ui]
-is_visible = false
-label = TA-MISP 42 Splunk
+is_visible = true
+label = App-MISP42
 
 [launcher]
 author = Remi Seguy & Xavier Mertens
-description = App for using MISP IOCs in Splunk saved earches
-version = 2017.12.12.release20
+description = App for using MISP with Splunk
+version = 2017.12.18.release21
 
 [package]
 check_for_updates = false
