--- a/default/app.conf
+++ b/default/app.conf
@@ -1,16 +1,18 @@
 [install]
 state = enabled
 is_configured = 0
-build = 2017.12.18.release21
+# build = 2017.12.12.release20 - implements version 1 of mispgetioc
+# build = 2017.12.19.release30 - implements create_event action
+build = 2017.12.19.release30
 
 [ui]
 is_visible = true
 label = App-MISP42
 
 [launcher]
-author = Remi Seguy & Xavier Mertens
+author = Remi Seguy
 description = App for using MISP with Splunk
-version = 2017.12.18.release21
+version = 2017.12.19.release30
 
 [package]
 check_for_updates = false
