--- a/default/alert_actions.conf
+++ b/default/alert_actions.conf
@@ -2,6 +2,14 @@
 is_custom = 1
 label = Alert to create MISP event(s)
 description = Create events in MISP (alert action)
-icon_path = misp-logo-small.png
+icon_path = misp_logo_small.png
+payload_format = json
+disabled = 0
+
+[thehive_alert_create_alert]
+is_custom = 1
+label = Alert to create THEHIVE alert(s)
+description = Create alerts in theHive
+icon_path = thehive_logo_small.png
 payload_format = json
 disabled = 0
