--- a/default/app.conf
+++ b/default/app.conf
@@ -3,7 +3,11 @@ state = enabled
 is_configured = 0
 # build = 2017.12.12.release20 - implements version 1 of mispgetioc
 # build = 2017.12.19.release30 - implements create_event action
-build = 2017.12.19.release30
+# build = 2017.12.29.release31 - integrate thehive alert action
+# build = 2017.12.29.release32 - group artifacts to same sourceRef
+# build = 2017.12.30.release33 - replace user/password by the hive API auth Key
+# build = 2017.12.30.release40 - released version
+build = 2017.12.30.release40
 
 [ui]
 is_visible = true
@@ -11,8 +15,9 @@ label = App-MISP42
 
 [launcher]
 author = Remi Seguy
-description = App for using MISP with Splunk
-version = 2017.12.19.release30
+description = App for using MISP with Splunk (option thehive)
+version = 2017.12.30.release40
 
 [package]
 check_for_updates = false
+ 
