misp alert one column per type

--- a/default/misp.conf
+++ b/default/misp.conf
@@ -1,5 +1,5 @@
 [mispsetup]
-mispsrv = https://
+mispsrv = https://misp.local
 mispkey = 
 sslcheck = 0
 thehiveURL = http://hive.example.com/api/alert
