alert action sighting

--- a/default/alert_actions.conf
+++ b/default/alert_actions.conf
@@ -6,6 +6,15 @@ icon_path = misp_logo_small.png
 payload_format = json
 disabled = 0
 
+[misp_alert_sighting]
+is_custom = 1
+label = Alert for sighting MISP attribute(s)
+description = Increment sighting counter for attributes in MISP (alert action)
+icon_path = misp_sighting.png
+payload_format = json
+disabled = 0
+
+
 [thehive_alert_create_alert]
 is_custom = 1
 label = Alert to create THEHIVE alert(s)
