sighting by uuid

--- a/default/app.conf
+++ b/default/app.conf
@@ -7,8 +7,9 @@ is_configured = 0
 # build = 2017.12.29.release32 - group artifacts to same sourceRef
 # build = 2017.12.30.release33 - replace user/password by the hive API auth Key
 # build = 2017.12.30.release40 - released version
-# build = 2017.01.05.release50 - implement alert for sighting
-build = 2017.01.05.release50
+# build = 2018.01.05.release50 - implement alert for sighting
+# build = 2018.02.01.release51 - implement alert for sighting by uuid
+build = 2018.02.01.release51
 
 [ui]
 is_visible = true
@@ -17,7 +18,7 @@ label = App-MISP42
 [launcher]
 author = Remi Seguy
 description = App for using MISP with Splunk (option thehive)
-version = 2017.01.05.release50
+version = 2018.02.01.release51
 
 [package]
 check_for_updates = false
