--- a/default/app.conf
+++ b/default/app.conf
@@ -9,7 +9,8 @@ is_configured = 0
 # build = 2017.12.30.release40 - released version
 # build = 2018.01.05.release50 - implement alert for sighting
 # build = 2018.02.01.release51 - implement alert for sighting by uuid
-build = 2018.02.01.release51
+# build = 2018.03.14.release52 - implement type of sighting (0,1 or 2)
+build = 2018.03.14.release52
 
 [ui]
 is_visible = true
@@ -18,7 +19,7 @@ label = App-MISP42
 [launcher]
 author = Remi Seguy
 description = App for using MISP with Splunk (option thehive)
-version = 2018.02.01.release51
+version = 2018.03.14.release52
 
 [package]
 check_for_updates = false
