--- a/default/alert_actions.conf
+++ b/default/alert_actions.conf
@@ -17,7 +17,7 @@ disabled = 0
 
 [thehive_alert_create_alert]
 is_custom = 1
-label = Alert to create THEHIVE alert(s)
+label = create THEHIVE alert(s) (alert action)
 description = Create alerts in theHive
 icon_path = thehive_logo_small.png
 payload_format = json
