--- a/default/savedsearches.conf
+++ b/default/savedsearches.conf
@@ -15,3 +15,4 @@ relation = equal to
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
 search = |mispgetioc last=24h getorg=Y | where orgc != "MISPREM"
+disabled = 1
