--- a/default/app.conf
+++ b/default/app.conf
@@ -10,7 +10,8 @@ is_configured = 0
 # build = 2018.01.05.release50 - implement alert for sighting
 # build = 2018.02.01.release51 - implement alert for sighting by uuid
 # build = 2018.03.14.release52 - implement type of sighting (0,1 or 2)
-build = 2018.03.14.release52
+# build = 2018.04.21.release53 - cleanup code - update sdk  - tagging
+build = 2018.04.21.release53
 
 [ui]
 is_visible = true
@@ -18,8 +19,8 @@ label = App-MISP42
 
 [launcher]
 author = Remi Seguy
-description = App for using MISP with Splunk (option thehive)
-version = 2018.03.14.release52
+description = App for using MISP with Splunk
+version = build = 2018.04.21.release53
 
 [package]
 check_for_updates = false
