--- a/default/misp.conf
+++ b/default/misp.conf
@@ -4,3 +4,6 @@ mispkey =
 sslcheck = 0
 thehiveURL = http://hive.example.com/api/alert
 thehiveKey = ***API*KEY***
+SPLUNK_HOME = /opt/splunk
+P3_PATH = /usr/bin/python3
+TMP_PATH = /tmp
