--- a/default/app.conf
+++ b/default/app.conf
@@ -11,7 +11,7 @@ is_configured = 0
 # build = 2018.02.01.release51 - implement alert for sighting by uuid
 # build = 2018.03.14.release52 - implement type of sighting (0,1 or 2)
 # build = 2018.04.21.release53 - cleanup code - update sdk  - tagging
-build = 2018.04.21.release53
+# build = 2018.04.22.v2.release01 - rewrite mispgetioc to provide a complete table of attributes
 
 [ui]
 is_visible = true
@@ -20,7 +20,7 @@ label = App-MISP42
 [launcher]
 author = Remi Seguy
 description = App for using MISP with Splunk
-version = build = 2018.04.21.release53
+version = 2018.04.21.v2.release01
 
 [package]
 check_for_updates = false
