v2 of misp_alert_create_event

--- a/default/app.conf
+++ b/default/app.conf
@@ -12,6 +12,8 @@ is_configured = 0
 # build = 2018.03.14.release52 - implement type of sighting (0,1 or 2)
 # build = 2018.04.21.release53 - cleanup code - update sdk  - tagging
 # build = 2018.04.22.v2.release01 - rewrite mispgetioc to provide a complete table of attributes
+# build = 2018.04.23.v2.release02 - rewrite mispgetioc to provide a complete table of attributes
+build = 2018.04.23.v2.release02 - rewrite misp_alert_create_event to move code to python3
 
 [ui]
 is_visible = true
@@ -20,7 +22,7 @@ label = App-MISP42
 [launcher]
 author = Remi Seguy
 description = App for using MISP with Splunk
-version = 2018.04.21.v2.release01
+version = 2018.04.23.v2.release02
 
 [package]
 check_for_updates = false
