--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -14,7 +14,8 @@ is_configured = 0
 # build = 2018.04.22.v2.release01 - rewrite mispgetioc to provide a complete table of attributes
 # build = 2018.04.23.v2.release02 - rewrite misp_alert_create_event to move code to python3
 # build = 2018.04.29.v2.release03 - handles MISP file, email and domain-ip objects in alerts
-build = 2018.04.29.v2.release03 - handles MISP file, email and domain-ip objects in alerts
+# build = 2018.05.07.v2.release04 - search by tags and add tags to created events
+build = 2018.05.07.v2.release04
 
 [ui]
 is_visible = true
@@ -23,7 +24,7 @@ label = App-MISP42
 [launcher]
 author = Remi Seguy
 description = App for using MISP with Splunk
-version = 2018.04.29.v2.release03
+version = 2018.05.07.v2.release04
 
 [package]
 check_for_updates = false
