--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -16,7 +16,8 @@ is_configured = 0
 # build = 2018.04.29.v2.release03 - handles MISP file, email and domain-ip objects in alerts
 # build = 2018.05.07.v2.release04 - search by tags and add tags to created events
 # build = 2018.05.14.v2.release05 - remove check in mispgetioc.py 
-build = 2018.05.14.v2.release05
+# build = 2018.05.14.v2.release06 - check env variables 
+build = 2018.05.14.v2.release06
 
 [ui]
 is_visible = true
@@ -25,7 +26,7 @@ label = App-MISP42
 [launcher]
 author = Remi Seguy
 description = App for using MISP with Splunk
-version = 2018.05.14.v2.release05
+version = 2018.05.14.v2.release06
 
 [package]
 check_for_updates = false
