update app package

--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -17,7 +17,8 @@ is_configured = 0
 # build = 2018.05.07.v2.release04 - search by tags and add tags to created events
 # build = 2018.05.14.v2.release05 - remove check in mispgetioc.py 
 # build = 2018.05.14.v2.release06 - check env variables 
-build = 2018.05.14.v2.release06
+# build = 2018.06.06.v2.release07 - fix #20 & #21
+build = 2018.06.06.v2.release07
 
 [ui]
 is_visible = true
@@ -26,7 +27,7 @@ label = App-MISP42
 [launcher]
 author = Remi Seguy
 description = App for using MISP with Splunk
-version = 2018.05.14.v2.release06
+version = 2018.06.06.v2.release07
 
 [package]
 check_for_updates = false
