--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -18,7 +18,8 @@ is_configured = 0
 # build = 2018.05.14.v2.release05 - remove check in mispgetioc.py 
 # build = 2018.05.14.v2.release06 - check env variables 
 # build = 2018.06.06.v2.release07 - fix #20 & #21
-build = 2018.06.06.v2.release07
+# build = 2018.09.15.v3.release01 - improve logging and new method in PyMISP 2.4.95
+build = 2018.09.15.v3.release01
 
 [ui]
 is_visible = true
@@ -27,7 +28,7 @@ label = App-MISP42
 [launcher]
 author = Remi Seguy
 description = App for using MISP with Splunk
-version = 2018.06.06.v2.release07
+version = 2018.09.15.v3.release01
 
 [package]
 check_for_updates = false
