--- a/misp42splunk/default/misp.conf
+++ b/misp42splunk/default/misp.conf
@@ -1,7 +1,7 @@
 [mispsetup]
 mispsrv = https://misp.local
-mispkey = 
-sslcheck = 0
+mispkey = ***API*KEY***
+sslcheck = 1
 thehiveURL = http://hive.example.com/api/alert
 thehiveKey = ***API*KEY***
 P3_PATH = /usr/bin/python3
