--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -19,8 +19,9 @@ is_configured = 0
 # build = 2018.05.14.v2.release06 - check env variables 
 # build = 2018.06.06.v2.release07 - fix #20 & #21
 # build = 2018.09.15.v3.release01 - improve logging and new method in PyMISP 2.4.95
-# build = 2018.10.01.v4.release01 - new custom command mispquery
-build = 2018.10.01.v4.release01
+# build = 2018.10.07.v3.release02 - improve logging and error handling
+# build = 2018.10.07.v3.release03 - use module tempfile
+build = 2018.10.07.v3.release03
 
 [ui]
 is_visible = true
@@ -29,7 +30,7 @@ label = App-MISP42
 [launcher]
 author = Remi Seguy
 description = App for using MISP with Splunk
-version = 2018.10.01.v4.release01
+version = 2018.10.07.v3.release03
 
 [package]
 check_for_updates = false
