fix pymisp import

--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -21,7 +21,8 @@ is_configured = 0
 # build = 2018.09.15.v3.release01 - improve logging and new method in PyMISP 2.4.95
 # build = 2018.10.07.v3.release02 - improve logging and error handling
 # build = 2018.10.07.v3.release03 - use module tempfile
-build = 2018.10.07.v3.release03
+# build = 2018.10.09.v3.release04 - fix pymisp_getioc.py 
+build = 2018.10.09.v3.release04
 
 [ui]
 is_visible = true
@@ -30,7 +31,7 @@ label = App-MISP42
 [launcher]
 author = Remi Seguy
 description = App for using MISP with Splunk
-version = 2018.10.07.v3.release03
+version = 2018.10.09.v3.release04
 
 [package]
 check_for_updates = false
