--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -22,7 +22,8 @@ is_configured = 0
 # build = 2018.10.07.v3.release02 - improve logging and error handling
 # build = 2018.10.07.v3.release03 - use module tempfile
 # build = 2018.10.09.v3.release04 - fix pymisp_getioc.py 
-build = 2018.10.09.v3.release04
+# build = 2018.10.14.v4.release01 - custom command mispquery 
+build = 2018.10.14.v4.release01
 
 [ui]
 is_visible = true
@@ -31,7 +32,7 @@ label = App-MISP42
 [launcher]
 author = Remi Seguy
 description = App for using MISP with Splunk
-version = 2018.10.09.v3.release04
+version = 2018.10.14.v4.release01
 
 [package]
 check_for_updates = false
