--- a/misp42splunk/default/searchbnf.conf
+++ b/misp42splunk/default/searchbnf.conf
@@ -1,18 +1,28 @@
 [mispquery-command]
-syntax		= mispquery
-shortdesc	= Python-based LDAP Query Command
-description	= ldapquery is a generating command that allows the user to query an LDAP service
+syntax		= mispquery (<mispquery-options>)*
+shortdesc	= search in MISP for attributes having the value of field
+description	= search in MISP for attributes having the value of field - 
 
-example1 = | ldapquery uri="ldap://ldap.example.com" basedn="dc=example,dc=com"
-example2 = | ldapquery uri="ldaps://ldap.example.com:636" verifycert=true scope=onelevel basedn="ou=users,dc=example,dc=com" binddn="dn=splunk,ou=serviceaccounts,dc=example,dc=com" bindpassword="password" ldapfilter="(objectClass=posixAccount)" attributelist="cn mail"
+example1 = | mispquery field=clientip 
+example2 = | mispquery field=clientip onlyids=y comment=y
 
+[mispquery-options]
+syntax = field=<fieldname>) onlyids=y/n comment=y/n mispsrv=https://host:port mispkey=misp-authorization-key  sslcheck=y/n            
+description = mispquery takes the value of fieldname and searches in MISP instance for matching attributes.\
+  MISP instance settings can be overwritten using (mispsrv, mispkey, sshcheck).\
+  You can filter on 'to_ids' flag\
+  You may display the attribuite comment (comment=y default = n)
 ##################
 # mispgetioc
 ##################
 [mispgetioc-command]
 syntax = |mispgetioc (<mispgetioc-options>)* 
-shortdesc = retrieve attributes of matching events in MISP instance.
-description = retrieve attributes of matching events in MISP instance. Must provide either option 'eventid=' or 'last='.
+shortdesc = retrieve attributes of matching events in MISP instance. Must provide either option 'eventid=' or 'last='.
+description = mispgetioc searches in MISP instance (either the one defined in app setup or\
+  at mispsrv URL with mispkey checking the certificate or not (sshcheck).\
+  You can filter on 'category' or 'type' of attributes, on attributes having the 'to_ids' flag\
+  or specific 'tags' or on contrary not having 'not_tags'.\
+  You may display the attribuite uuid (getuuid: default = false) or org (getorg: default=false)
 usage = public
 example1 = | mispgetioc last=10d
 comment1 = retrieve attributes of all events published in last 10 days.
@@ -23,9 +33,9 @@ related = misp
 tags = misp
 
 [mispgetioc-options]
-syntax = (eventid=<int>) |  (last=<int>dhm)  onlyids=<bool> category=CSV_string type=CSV_string getuuid=y/n getorg=y/n tags=CSV_string  not_tags=CSV_string mispsrv=https://host:port mispkey=misp-authorization-key  sslcheck=y/n            
+syntax = (eventid=<int>) |  (last=<int>dhm)  onlyids=y/n category=CSV_string type=CSV_string getuuid=y/n getorg=y/n tags=CSV_string  not_tags=CSV_string mispsrv=https://host:port mispkey=misp-authorization-key  sslcheck=y/n            
 description = mispgetioc searches in MISP instance (either the one defined in app setup or\
   at mispsrv URL with mispkey checking the certificate or not (sshcheck).\
-  You can filter on 'category' or 'type' of attributes, on events having the 'to_ids' flag\
+  You can filter on 'category' or 'type' of attributes, on attributes having the 'to_ids' flag\
   or specific 'tags' or on contrary not having 'not_tags'.\
-  You may display the attribuite uuid (getuuid: defqult = false) or org (getorg: default=false)
+  You may display the attribuite uuid (getuuid: default = n) or org (getorg: default=n)
