--- a/misp42splunk/default/commands.conf
+++ b/misp42splunk/default/commands.conf
@@ -13,3 +13,9 @@ supports_rawargs = true
 [mispquery]
 filename = mispquery.py
 chunked = true
+
+[mispioc]
+filename = mispioc.py
+streaming = true
+chunked = true
+local = true
