--- a/misp42splunk/default/searchbnf.conf
+++ b/misp42splunk/default/searchbnf.conf
@@ -1,17 +1,24 @@
+##################
+# mispquery
+##################
 [mispquery-command]
 syntax		= mispquery (<mispquery-options>)*
 shortdesc	= search in MISP for attributes having the value of field
 description	= search in MISP for attributes having the value of field - 
 
-example1 = | mispquery field=clientip 
-example2 = | mispquery field=clientip onlyids=y comment=y
+example1 = | mispquery field=clientip
+comment1 = retrieve attributes properties (attribute uuid, event_id, type, category, to_ids flag) for matching values of field clientip 
+example2 = | mispquery field=clientip onlyids=y gettag=y
+comment2 = same as example 1 with attribute tag(s) if any  
 
 [mispquery-options]
-syntax = field=<fieldname>) onlyids=y/n comment=y/n mispsrv=https://host:port mispkey=misp-authorization-key  sslcheck=y/n            
+syntax = field=<fieldname>) onlyids=y/n gettag=y/n mispsrv=https://host:port mispkey=misp-authorization-key  sslcheck=y/n            
 description = mispquery takes the value of fieldname and searches in MISP instance for matching attributes.\
   MISP instance settings can be overwritten using (mispsrv, mispkey, sshcheck).\
   You can filter on 'to_ids' flag\
-  You may display the attribuite comment (comment=y default = n)
+  You may display the attribuite tag(s) (gettag=y default=n)
+
+
 ##################
 # mispgetioc
 ##################
