mispgetioc using MISP API only

--- a/misp42splunk/default/searchbnf.conf
+++ b/misp42splunk/default/searchbnf.conf
@@ -29,18 +29,18 @@ description = mispgetioc searches in MISP instance (either the one defined in ap
   at mispsrv URL with mispkey checking the certificate or not (sshcheck).\
   You can filter on 'category' or 'type' of attributes, on attributes having the 'to_ids' flag\
   or specific 'tags' or on contrary not having 'not_tags'.\
-  You may display the attribuite uuid (getuuid: default = false) or org (getorg: default=false)
+  You may display the attribute uuid (getuuid: default = false) or creating org (getorg: default=false)
 usage = public
 example1 = | mispgetioc last=10d
 comment1 = retrieve attributes of all events published in last 10 days.
-example2 = | mispgetioc last=10d category="Payload delivery,Network activity" type=ip-dst onlyids=y
-comment2 = retrieve published in last 10 days attributes of type 'ip-dst' and categories 'Payload delivery' or 'Network activity' and with the flag 'to_ids' set.
+example2 = | mispgetioc last=10d category="Payload delivery,Network%" type=ip-dst onlyids=y
+comment2 = retrieve published in last 10 days attributes of type 'ip-dst' and categories 'Payload delivery' or starting by 'Network' and with the flag 'to_ids' set.
 usage = public
 related = misp
 tags = misp
 
 [mispgetioc-options]
-syntax = (eventid=<int>) |  (last=<int>dhm)  onlyids=y/n category=CSV_string type=CSV_string getuuid=y/n getorg=y/n tags=CSV_string  not_tags=CSV_string mispsrv=https://host:port mispkey=misp-authorization-key  sslcheck=y/n            
+syntax = (eventid=<int>(,<int>,<int>) |  (last=<int>dhm)  onlyids=y/n category=CSV_string type=CSV_string getuuid=y/n getorg=y/n tags=CSV_string  not_tags=CSV_string mispsrv=https://host:port mispkey=misp-authorization-key  sslcheck=y/n            
 description = mispgetioc searches in MISP instance (either the one defined in app setup or\
   at mispsrv URL with mispkey checking the certificate or not (sshcheck).\
   You can filter on 'category' or 'type' of attributes, on attributes having the 'to_ids' flag\
