--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -23,7 +23,8 @@ is_configured = 0
 # build = 2018.10.07.v3.release03 - use module tempfile
 # build = 2018.10.09.v3.release04 - fix pymisp_getioc.py 
 # build = 2018.10.14.v4.release01 - custom command mispquery 
-build = 2018.10.14.v4.release01
+# build = 2018.11.04.v4.release02 - mispgetioc directly using MISP API
+build = 2018.11.04.v4.release02
 
 [ui]
 is_visible = true
@@ -32,7 +33,7 @@ label = App-MISP42
 [launcher]
 author = Remi Seguy
 description = App for using MISP with Splunk
-version = 2018.10.14.v4.release01
+version = 2018.11.04.v4.release02
 
 [package]
 check_for_updates = false
