--- a/misp42splunk/default/commands.conf
+++ b/misp42splunk/default/commands.conf
@@ -3,12 +3,12 @@ filename = mispgetioc.py
 local = true
 chunked = true
 
-[mispquery]
-filename = mispquery.py
+[mispsearch]
+filename = mispsearch.py
+local = true
 chunked = true
 
-[mispioc]
-filename = mispioc.py
-streaming = true
+[mispsight]
+filename = mispsight.py
 chunked = true
 local = true
