--- a/misp42splunk/default/misp.conf
+++ b/misp42splunk/default/misp.conf
@@ -1,7 +1,7 @@
 [mispsetup]
-mispsrv = https://misp.local
-mispkey = ***API*KEY***
-sslcheck = 1
-thehiveURL = http://hive.example.com/api/alert
-thehiveKey = ***API*KEY***
+misp_url = https://misp.local
+misp_key = ***API*KEY***
+misp_verifycert = 1
+thehive_url = http://hive.example.com/api/alert
+thehive_key = ***API*KEY***
 P3_PATH = /usr/bin/python3
