--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -24,7 +24,8 @@ is_configured = 0
 # build = 2018.10.09.v3.release04 - fix pymisp_getioc.py 
 # build = 2018.10.14.v4.release01 - custom command mispquery 
 # build = 2018.11.04.v4.release02 - mispgetioc directly using MISP API
-build = 2018.11.04.v4.release02
+# build = 2018.11.04.v4.release03 - clean up in field names
+build = 2018.11.04.v4.release03
 
 [ui]
 is_visible = true
@@ -33,7 +34,7 @@ label = App-MISP42
 [launcher]
 author = Remi Seguy
 description = App for using MISP with Splunk
-version = 2018.11.04.v4.release02
+version = 2018.11.04.v4.release03
 
 [package]
 check_for_updates = false
