--- a/misp42splunk/default/searchbnf.conf
+++ b/misp42splunk/default/searchbnf.conf
@@ -1,25 +1,4 @@
 ##################
-# mispsearch
-##################
-[mispsearch-command]
-syntax		= mispsearch (<mispsearch-options>)*
-shortdesc	= search in MISP for attributes having the value of field
-description	= search in MISP for attributes having the value of field - 
-
-example1 = | mispsearch field=clientip
-comment1 = retrieve attributes properties (attribute uuid, event_id, type, category, to_ids flag) for matching values of field clientip 
-example2 = | mispsearch field=clientip onlyids=y gettag=y
-comment2 = same as example 1 with attribute tag(s) if any  
-
-[mispsearch-options]
-syntax = field=<fieldname>) onlyids=y/n gettag=y/n mispsrv=https://host:port mispkey=misp-authorization-key  sslcheck=y/n            
-description = mispsearch takes the value of fieldname and searches in MISP instance for matching attributes.\
-  MISP instance settings can be overwritten using (mispsrv, mispkey, sshcheck).\
-  You can filter on 'to_ids' flag\
-  You may display the attribuite tag(s) (gettag=y default=n)
-
-
-##################
 # mispgetioc
 ##################
 [mispgetioc-command]
@@ -40,9 +19,49 @@ related = misp
 tags = misp
 
 [mispgetioc-options]
-syntax = (eventid=<int>(,<int>,<int>) |  (last=<int>dhm)  onlyids=y/n category=CSV_string type=CSV_string getuuid=y/n getorg=y/n tags=CSV_string  not_tags=CSV_string mispsrv=https://host:port mispkey=misp-authorization-key  sslcheck=y/n            
+syntax = (eventid=<int>(,<int>,<int>) |  (last=<int>dhm)  onlyids=y/n category=CSV_string type=CSV_string getuuid=y/n getorg=y/n geteventtag=y/n tags=CSV_string  not_tags=CSV_string misp_url=https://host:port misp_key=misp-authorization-key misp_verifycert=y/n
 description = mispgetioc searches in MISP instance (either the one defined in app setup or\
   at mispsrv URL with mispkey checking the certificate or not (sshcheck).\
   You can filter on 'category' or 'type' of attributes, on attributes having the 'to_ids' flag\
   or specific 'tags' or on contrary not having 'not_tags'.\
   You may display the attribuite uuid (getuuid: default = n) or org (getorg: default=n)
+
+##################
+# mispsearch
+##################
+[mispsearch-command]
+syntax    = mispsearch (<mispsearch-options>)*
+shortdesc = search in MISP for attributes having the value of field
+description = search in MISP for attributes having the value of field - 
+
+example1 = | mispsearch field=clientip
+comment1 = retrieve attributes properties (attribute uuid, event_id, type, category, to_ids flag) for matching values of field clientip 
+example2 = | mispsearch field=clientip onlyids=y gettag=y
+comment2 = same as example 1 with attribute tag(s) if any  
+
+[mispsearch-options]
+syntax = field=<fieldname>) onlyids=y/n gettag=y/n misp_urlv=https://host:port misp_key=misp-authorization-key misp_verifycert=y/n
+description = mispsearch takes the value of fieldname and searches in MISP instance for matching attributes.\
+  MISP instance settings can be overwritten using (mispsrv, mispkey, sshcheck).\
+  You can filter on 'to_ids' flag\
+  You may display the attribuite tag(s) (gettag=y default=n)
+
+##################
+# mispsight
+##################
+[mispsight-command]
+syntax    = mispsight (<mispsight-options>)*
+shortdesc = search in MISP for sighting data 
+description = search in MISP for sighting data of attributes having the value of field
+
+example1 = | mispsight field=clientip
+comment1 = retrieve sighting attributes data for matching values of field clientip 
+example2 = | mispsight field=clientip onlyids=y gettag=y
+comment2 = same as example 1 with attribute tag(s) if any  
+
+[mispsight-options]
+syntax = field=<fieldname>) onlyids=y/n gettag=y/n misp_url=https://host:port misp_key=misp-authorization-key misp_verifycert=y/n           
+description = mispsight takes the value of fieldname and searches in MISP instance for matching attributes.\
+  MISP instance settings can be overwritten using (mispsrv, mispkey, sshcheck).\
+  You can filter on 'to_ids' flag\
+  You may display the attribuite tag(s) (gettag=y default=n)
