--- a/misp42splunk/default/collections.conf
+++ b/misp42splunk/default/collections.conf
@@ -11,6 +11,8 @@ field.misp_object_id = number
 field.misp_orgc_id = number
 field.misp_sha1 = string
 field.misp_sha256 = string
+field.misp_sha512 = string
+field.misp_ssdeep = string
 field.misp_size_in_bytes = string
 field.misp_tag = string
 field.misp_text = string
