--- a/misp42splunk/default/transforms.conf
+++ b/misp42splunk/default/transforms.conf
@@ -1,7 +1,7 @@
 [MISP_file_name]
 collection = kvmisp_file_name
 external_type = kvstore
-fields_list = _key,misp_filename,misp_category,misp_datetime,misp_description,misp_event_id,misp_malware_sample,misp_md5,misp_object_id,misp_orgc_id,misp_sha1,misp_sha256,misp_size_in_bytes,misp_tag,misp_text,misp_timestamp,misp_to_ids,misp_attribute_uuid
+fields_list = _key,misp_filename,misp_category,misp_datetime,misp_description,misp_event_id,misp_malware_sample,misp_md5,misp_object_id,misp_orgc_id,misp_sha1,misp_sha256,misp_sha512,misp_ssdeep,misp_size_in_bytes,misp_tag,misp_text,misp_timestamp,misp_to_ids,misp_attribute_uuid
 
 [MISP_domain]
 collection = kvmisp_domain
