--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -28,7 +28,8 @@ is_configured = 0
 # build = 2018.11.10.v1.25 - mispsight custom search command
 # build = 2018.11.11.v2.01 - major improvements with KV store and multi-value fields
 # build = 2018.11.11.v2.02 - remove TH components
-build = 2018.11.11.v2.02
+# build = 2018.11.12.v2.03 - fix
+build = 2018.11.12.v2.03
 
 [ui]
 is_visible = true
@@ -37,7 +38,7 @@ label = App-MISP42
 [launcher]
 author = Remi Seguy
 description = App for using MISP with Splunk
-version = 2018.11.11.v2.02
+version = 2018.11.12.v2.03
 
 [package]
 check_for_updates = false
