collections and savesearches

--- a/misp42splunk/default/collections.conf
+++ b/misp42splunk/default/collections.conf
@@ -1,5 +1,5 @@
 # http://docs.splunk.com/Documentation/CIM/4.12.0/User/Malware
-[kvmisp_file_name]
+[kvmisp_filename]
 field.misp_filename = string
 field.misp_category = string
 field.misp_datetime = string
@@ -18,42 +18,16 @@ field.misp_tag = string
 field.misp_text = string
 field.misp_timestamp = number
 field.misp_to_ids = boolean
-field.misp_uuid = string
+field.misp_attribute_uuid = string
 replicate = false
 
 # http://docs.splunk.com/Documentation/CIM/4.12.0/User/Web
-[kvmisp_domain]
+[kvmisp_web]
 field.misp_domain = string
-field.misp_category = string
-field.misp_datetime = string
-field.misp_description = string
-field.misp_event_id = number
-field.misp_object_id = number
-field.misp_orgc_id = number
-field.misp_tag = string
-field.misp_text = string
-field.misp_timestamp = number
-field.misp_to_ids = boolean
-field.misp_uuid = string
-replicate = false
-
-[kvmisp_ip]
-field.misp_ip_src = string
+field.misp_user_agent = string
+field.misp_user_agent_length = number
 field.misp_ip_dst = string
-field.misp_category = string
-field.misp_datetime = string
-field.misp_description = string
-field.misp_event_id = number
-field.misp_object_id = number
-field.misp_orgc_id = number
-field.misp_tag = string
-field.misp_text = string
-field.misp_timestamp = number
-field.misp_to_ids = boolean
-field.misp_uuid = string
-replicate = false
-
-[kvmisp_url]
+field.misp_ip_src = string
 field.misp_url = string
 field.misp_category = string
 field.misp_datetime = string
@@ -65,57 +39,14 @@ field.misp_tag = string
 field.misp_text = string
 field.misp_timestamp = number
 field.misp_to_ids = boolean
-field.misp_uuid = string
-replicate = false
-
-[kvmisp_user_agent]
-field.misp_user_agent = string
-field.misp_user_agent_length = number
-field.misp_category = string
-field.misp_datetime = string
-field.misp_description = string
-field.misp_event_id = number
-field.misp_object_id = number
-field.misp_orgc_id = number
-field.misp_tag = string
-field.misp_text = string
-field.misp_timestamp = number
-field.misp_to_ids = boolean
-field.misp_uuid = string
+field.misp_attribute_uuid = string
 replicate = false
 
 # http://docs.splunk.com/Documentation/CIM/4.12.0/User/Email
-[kvmisp_attachment]
-field.misp_attachment = string
-field.misp_category = string
-field.misp_datetime = string
-field.misp_description = string
-field.misp_event_id = number
-field.misp_object_id = number
-field.misp_orgc_id = number
-field.misp_tag = string
-field.misp_text = string
-field.misp_timestamp = number
-field.misp_to_ids = boolean
-field.misp_uuid = string
-replicate = false
-
-[kvmisp_email_src]
+[kvmisp_email]
+field.misp_email_attachment = string
 field.misp_email_src = string
-field.misp_category = string
-field.misp_datetime = string
-field.misp_description = string
-field.misp_event_id = number
-field.misp_object_id = number
-field.misp_orgc_id = number
-field.misp_tag = string
-field.misp_text = string
-field.misp_timestamp = number
-field.misp_to_ids = boolean
-field.misp_uuid = string
-replicate = false
-
-[kvmisp_email_subject]
+field.misp_email_src_display_name = string
 field.misp_email_subject = string
 field.misp_category = string
 field.misp_datetime = string
@@ -127,5 +58,5 @@ field.misp_tag = string
 field.misp_text = string
 field.misp_timestamp = number
 field.misp_to_ids = boolean
-field.misp_uuid = string
+field.misp_attribute_uuid = string
 replicate = false
