--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -29,7 +29,8 @@ is_configured = 0
 # build = 2018.11.11.v2.01 - major improvements with KV store and multi-value fields
 # build = 2018.11.11.v2.02 - remove TH components
 # build = 2018.11.12.v2.03 - fix
-build = 2018.11.12.v2.03
+# build = 2018.11.12.v2.04 - collections, transforms and savesearches
+build = 2018.11.12.v2.04
 
 [ui]
 is_visible = true
@@ -38,7 +39,7 @@ label = App-MISP42
 [launcher]
 author = Remi Seguy
 description = App for using MISP with Splunk
-version = 2018.11.12.v2.03
+version = 2018.11.12.v2.04
 
 [package]
 check_for_updates = false
