--- a/misp42splunk/default/transforms.conf
+++ b/misp42splunk/default/transforms.conf
@@ -2,15 +2,15 @@
 [MISP_filename]
 collection = kvmisp_filename
 external_type = kvstore
-fields_list = _key,misp_filename,misp_category,misp_datetime,misp_description,misp_event_id,misp_malware_sample,misp_md5,misp_object_id,misp_orgc_id,misp_sha1,misp_sha256,misp_sha512,misp_ssdeep,misp_size_in_bytes,misp_tag,misp_text,misp_timestamp,misp_to_ids,misp_attribute_uuid
+fields_list = _key,misp_filename,misp_attribute_id,misp_attribute_uuid,misp_category,misp_datetime,misp_description,misp_event_id,misp_malware_sample,misp_md5,misp_object_id,misp_orgc_id,misp_sha1,misp_sha256,misp_sha512,misp_ssdeep,misp_size_in_bytes,misp_tag,misp_text,misp_timestamp,misp_to_ids
 
 # http://docs.splunk.com/Documentation/CIM/4.12.0/User/Web
 [MISP_web]
 collection = kvmisp_web
 external_type = kvstore
-fields_list = _key,misp_domain,misp_ip_dst,misp_ip_src,misp_url,misp_user_agent,misp_user_agent_length,misp_category,misp_datetime,misp_description,misp_event_id,misp_object_id,misp_orgc_id,misp_tag,misp_timestamp,misp_to_ids,misp_attribute_uuid
+fields_list = _key,misp_domain,misp_attribute_id,misp_attribute_uuid,misp_ip_dst,misp_ip_src,misp_url,misp_user_agent,misp_user_agent_length,misp_category,misp_datetime,misp_description,misp_event_id,misp_object_id,misp_orgc_id,misp_tag,misp_timestamp,misp_to_ids
 
 [MISP_email]
 collection = kvmisp_email
 external_type = kvstore
-fields_list = _key,misp_email_attachment,misp_email_src,misp_email_src_display_name,misp_email_subject,misp_category,misp_datetime,misp_description,misp_event_id,misp_object_id,misp_orgc_id,misp_tag,misp_timestamp,misp_to_ids,misp_attribute_uuid
+fields_list = _key,misp_attribute_id,misp_attribute_uuid,misp_email_attachment,misp_email_src,misp_email_src_display_name,misp_email_subject,misp_category,misp_datetime,misp_description,misp_event_id,misp_object_id,misp_orgc_id,misp_tag,misp_timestamp,misp_to_ids
