--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -30,7 +30,8 @@ is_configured = 0
 # build = 2018.11.11.v2.02 - remove TH components
 # build = 2018.11.12.v2.03 - fix
 # build = 2018.11.12.v2.04 - collections, transforms and savesearches
-build = 2018.11.12.v2.04
+# build = 2018.11.14.v2.05 - mispgetioc attribute_id
+build = 2018.11.14.v2.05
 
 [ui]
 is_visible = true
@@ -39,8 +40,8 @@ label = App-MISP42
 [launcher]
 author = Remi Seguy
 description = App for using MISP with Splunk
-version = 2018.11.12.v2.04
+version = 2.0.5
 
 [package]
-check_for_updates = false
+id = App-MISP42
  
