--- a/misp42splunk/default/collections.conf
+++ b/misp42splunk/default/collections.conf
@@ -18,6 +18,7 @@ field.misp_tag = string
 field.misp_text = string
 field.misp_timestamp = number
 field.misp_to_ids = boolean
+field.misp_attribute_id = string
 field.misp_attribute_uuid = string
 replicate = false
 
@@ -39,6 +40,7 @@ field.misp_tag = string
 field.misp_text = string
 field.misp_timestamp = number
 field.misp_to_ids = boolean
+field.misp_attribute_id = string
 field.misp_attribute_uuid = string
 replicate = false
 
@@ -58,5 +60,6 @@ field.misp_tag = string
 field.misp_text = string
 field.misp_timestamp = number
 field.misp_to_ids = boolean
+field.misp_attribute_id = string
 field.misp_attribute_uuid = string
 replicate = false
