--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -31,7 +31,8 @@ is_configured = 0
 # build = 2018.11.12.v2.03 - fix
 # build = 2018.11.12.v2.04 - collections, transforms and savesearches
 # build = 2018.11.14.v2.05 - mispgetioc attribute_id
-build = 2018.11.14.v2.05
+# build = 2018.11.15.v2.06 - create event with tags including galaxy
+build = 2018.11.15.v2.06
 
 [ui]
 is_visible = true
@@ -40,7 +41,7 @@ label = App-MISP42
 [launcher]
 author = Remi Seguy
 description = App for using MISP with Splunk
-version = 2.0.5
+version = 2.0.6
 
 [package]
 id = App-MISP42
