--- a/misp42splunk/default/savedsearches.conf
+++ b/misp42splunk/default/savedsearches.conf
@@ -16,7 +16,7 @@ enableSched = 1
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
 search = | mispgetioc last=1d getuuid=y getorg=y type="filename,md5,sha1,sha256,sha512,ssdeep" geteventtag=y\
-| where misp_object_id != 0 and (isnotnull(misp_filename) or isnotnull(misp_md5) or isnotnull(misp_sha1) or isnotnull(misp_sha256)  or isnotnull(misp_sha512)  or isnotnull(misp_ssdeep))\
+| where misp_object_id != 0 and (isnotnull(misp_filename) or isnotnull(misp_md5) or isnotnull(misp_sha1) or isnotnull(misp_sha256)  or isnotnull(misp_sha512) or isnotnull(misp_ssdeep))\
 | outputlookup MISP_filename append=true
 
 [MISP_getioc_filename_last1d]
@@ -36,7 +36,7 @@ enableSched = 1
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
 search = | mispgetioc last=1d getuuid=y getorg=y type="filename" geteventtag=y\
-| where misp_object_id == 0 and isnotnull(misp_filename)
+| where misp_object_id == 0 and isnotnull(misp_filename)\
 | outputlookup MISP_filename append=true
 
 [MISP_getioc_md5_last1d]
@@ -56,7 +56,7 @@ enableSched = 1
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
 search = | mispgetioc last=1d getuuid=y getorg=y type="md5" geteventtag=y\
-| where misp_object_id == 0 and isnotnull(misp_md5)
+| where misp_object_id == 0 and isnotnull(misp_md5)\
 | outputlookup MISP_filename append=true
 
 [MISP_getioc_sha1_last1d]
@@ -76,7 +76,7 @@ enableSched = 1
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
 search = | mispgetioc last=1d getuuid=y getorg=y type="sha1" geteventtag=y\
-| where misp_object_id == 0 and isnotnull(misp_sha1)
+| where misp_object_id == 0 and isnotnull(misp_sha1)\
 | outputlookup MISP_filename append=true
 
 [MISP_getioc_sha256_last1d]
@@ -96,7 +96,7 @@ enableSched = 1
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
 search = | mispgetioc last=1d getuuid=y getorg=y type="sha256" geteventtag=y\
-| where misp_object_id == 0 and isnotnull(misp_sha256)
+| where misp_object_id == 0 and isnotnull(misp_sha256)\
 | outputlookup MISP_filename append=true
 
 [MISP_getioc_sha512_last1d]
@@ -116,7 +116,7 @@ enableSched = 1
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
 search = | mispgetioc last=1d getuuid=y getorg=y type="sha512" geteventtag=y\
-| where misp_object_id == 0 and isnotnull(misp_sha512)
+| where misp_object_id == 0 and isnotnull(misp_sha512)\
 | outputlookup MISP_filename append=true
 
 [MISP_getioc_ssdeep_last1d]
@@ -136,7 +136,7 @@ enableSched = 1
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
 search = | mispgetioc last=1d getuuid=y getorg=y type="ssdeep" geteventtag=y\
-| where misp_object_id == 0 and isnotnull(misp_ssdeep)
+| where misp_object_id == 0 and isnotnull(misp_ssdeep)\
 | outputlookup MISP_filename append=true
 
 [MISP_getioc_fn_md5_last1d]
@@ -156,8 +156,8 @@ enableSched = 1
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
 search = | mispgetioc last=1d getuuid=y getorg=y type="filename|md5" geteventtag=y\
-| where misp_object_id == 0
-| rex field="misp_filename|md5" "(?<misp_filename>.*)\|(?<misp_md5>{32})$"
+| where misp_object_id == 0\
+| rex field="misp_filename|md5" "(?<misp_filename>.*)\|(?<misp_md5>{32})$"\
 | outputlookup MISP_filename append=true
 
 [MISP_getioc_fn_sha1_last1d]
@@ -177,8 +177,8 @@ enableSched = 1
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
 search = | mispgetioc last=1d getuuid=y getorg=y type="filename|sha1" geteventtag=y\
-| where misp_object_id == 0
-| rex field="misp_filename|sha1" "(?<misp_filename>.*)\|(?<misp_sha1>{40})$"
+| where misp_object_id == 0\
+| rex field="misp_filename|sha1" "(?<misp_filename>.*)\|(?<misp_sha1>{40})$"\
 | outputlookup MISP_filename append=true
 
 [MISP_getioc_fn_sha256_last1d]
@@ -198,8 +198,8 @@ enableSched = 1
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
 search = | mispgetioc last=1d getuuid=y getorg=y type="filename|sha256" geteventtag=y\
-| where misp_object_id == 0
-| rex field="misp_filename|sha256" "(?<misp_filename>.*)\|(?<misp_sha256>{64})$"
+| where misp_object_id == 0\
+| rex field="misp_filename|sha256" "(?<misp_filename>.*)\|(?<misp_sha256>{64})$"\
 | outputlookup MISP_filename append=true
 
 [MISP_getioc_fn_sha512_last1d]
@@ -219,8 +219,8 @@ enableSched = 1
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
 search = | mispgetioc last=1d getuuid=y getorg=y type="filename|sha512" geteventtag=y\
-| where misp_object_id == 0
-| rex field="misp_filename|sha512" "(?<misp_filename>.*)\|(?<misp_sha512>{128})$"
+| where misp_object_id == 0\
+| rex field="misp_filename|sha512" "(?<misp_filename>.*)\|(?<misp_sha512>{128})$"\
 | outputlookup MISP_filename append=true
 
 [MISP_getioc_fn_sssdeep_last1d]
@@ -240,8 +240,8 @@ enableSched = 1
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
 search = | mispgetioc last=1d getuuid=y getorg=y type="filename|ssdeep" geteventtag=y\
-| where misp_object_id == 0
-| rex field="misp_filename|ssdeep" "^(?<misp_filename>[^\|]+)\|(?<misp_ssdeep>.*)$"
+| where misp_object_id == 0\
+| rex field="misp_filename|ssdeep" "^(?<misp_filename>[^\|]+)\|(?<misp_ssdeep>.*)$"\
 | outputlookup MISP_filename append=true
 
 
@@ -264,7 +264,7 @@ request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
 search = | mispgetioc last=1d getuuid=y getorg=y type="domain,ip-dst,ip-src,url,user_agent" geteventtag=y\
 | where misp_object_id != 0 and (isnotnull(misp_domain) or isnotnull(misp_ip_dst) or isnotnull(misp_ip_src) or isnotnull(misp_url)  or isnotnull(misp_user_agent))\
-| eval misp_user_agent_length=if(isnotnull(misp_user_agent),len(misp_user_agent),'')
+| eval misp_user_agent_length=if(isnotnull(misp_user_agent),len(misp_user_agent),'')\
 | outputlookup MISP_web append=true
 
 [MISP_getioc_domain_last1d]
@@ -284,7 +284,7 @@ enableSched = 1
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
 search = | mispgetioc last=1d getuuid=y getorg=y type="domain" geteventtag=y\
-| where misp_object_id == 0 and isnotnull(misp_domain)
+| where misp_object_id == 0 and isnotnull(misp_domain)\
 | outputlookup MISP_web append=true
 
 [MISP_getioc_ip_dst_last1d]
@@ -304,7 +304,7 @@ enableSched = 1
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
 search = | mispgetioc last=1d getuuid=y getorg=y type="ip-dst" geteventtag=y\
-| where misp_object_id == 0 and isnotnull(misp_ip_dst)
+| where misp_object_id == 0 and isnotnull(misp_ip_dst)\
 | outputlookup MISP_web append=true
 
 [MISP_getioc_ip_src_last1d]
@@ -324,7 +324,7 @@ enableSched = 1
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
 search = | mispgetioc last=1d getuuid=y getorg=y type="ip-src" geteventtag=y\
-| where misp_object_id == 0 and isnotnull(misp_ip_src)
+| where misp_object_id == 0 and isnotnull(misp_ip_src)\
 | outputlookup MISP_web append=true
 
 [MISP_getioc_url_last1d]
@@ -344,7 +344,7 @@ enableSched = 1
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
 search = | mispgetioc last=1d getuuid=y getorg=y type="url" geteventtag=y\
-| where misp_object_id == 0 and isnotnull(misp_url)
+| where misp_object_id == 0 and isnotnull(misp_url)\
 | outputlookup MISP_web append=true
 
 [MISP_getioc_user_agent_last1d]
@@ -364,8 +364,8 @@ enableSched = 1
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
 search = | mispgetioc last=1d getuuid=y getorg=y type="user_agent" geteventtag=y\
-| where misp_object_id == 0 and isnotnull(misp_user_agent)
-| eval misp_user_agent_length=len(misp_user_agent)
+| where misp_object_id == 0 and isnotnull(misp_user_agent)\
+| eval misp_user_agent_length=len(misp_user_agent)\
 | outputlookup MISP_web append=true
 
 [MISP_getioc_domain_ip_last1d]
@@ -385,8 +385,8 @@ enableSched = 1
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
 search = | mispgetioc last=1d getuuid=y getorg=y type="domain|ip" geteventtag=y\
-| where misp_object_id == 0
-| rex field="misp_domain|ip" "^(?<misp_domain>[^\|]+)\|(?<misp_ip_dst>.*)$"
+| where misp_object_id == 0\
+| rex field="misp_domain|ip" "^(?<misp_domain>[^\|]+)\|(?<misp_ip_dst>.*)$"\
 | outputlookup MISP_web append=true
 
 
