--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -32,7 +32,8 @@ is_configured = 0
 # build = 2018.11.12.v2.04 - collections, transforms and savesearches
 # build = 2018.11.14.v2.05 - mispgetioc attribute_id
 # build = 2018.11.15.v2.06 - create event with tags including galaxy
-build = 2018.11.15.v2.06
+# build = 2018.12.15.v2.07 - stop using Py?ISP for alert create events
+build = 2018.12.15.v2.07
 
 [ui]
 is_visible = true
@@ -41,7 +42,7 @@ label = App-MISP42
 [launcher]
 author = Remi Seguy
 description = App for using MISP with Splunk
-version = 2.0.6
+version = 2.0.7
 
 [package]
 id = App-MISP42
