fix streaming commands issue

--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -35,7 +35,8 @@ is_configured = 0
 # build = 2018.12.15.v2.07 - stop using PyMISP for alert create events
 # build = 2018.12.15.v2.08 - switch to MISP API for alert create events
 # build = 2018.12.22.v2.09 - issue #32 & #33
-build = 2018.12.22.v2.09
+# build = 2018.12.22.v2.10 - streaming commands NOT distributed
+build = 2018.12.22.v2.10
 
 [ui]
 is_visible = true
@@ -44,7 +45,7 @@ label = App-MISP42
 [launcher]
 author = Remi Seguy
 description = App for using MISP with Splunk
-version = 2.0.9
+version = 2.0.10
 
 [package]
 id = misp42splunk
