--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -1,31 +1,11 @@
+#
+# Splunk app configuration file
+#
+
 [install]
 state = enabled
 is_configured = 0
 # build = 2017.12.12.v1.1 - implements version 1 of mispgetioc
-# build = 2017.12.19.v1.2 - implements create_event action
-# build = 2017.12.29.v1.3 - integrate thehive alert action
-# build = 2017.12.29.v1.4 - group artifacts to same sourceRef
-# build = 2017.12.30.v1.5 - replace user/password by the hive API auth Key
-# build = 2017.12.30.v1.6 - released version
-# build = 2018.01.05.v1.7 - implement alert for sighting
-# build = 2018.02.01.v1.8 - implement alert for sighting by uuid
-# build = 2018.03.14.v1.9 - implement type of sighting (0,1 or 2)
-# build = 2018.04.21.v1.10 - cleanup code - update sdk  - tagging
-# build = 2018.04.22.v1.11 - rewrite mispgetioc to provide a complete table of attributes
-# build = 2018.04.23.v1.12 - rewrite misp_alert_create_event to move code to python3
-# build = 2018.04.29.v1.13 - handles MISP file, email and domain-ip objects in alerts
-# build = 2018.05.07.v1.14 - search by tags and add tags to created events
-# build = 2018.05.14.v1.15 - remove check in mispgetioc.py 
-# build = 2018.05.14.v1.16 - check env variables 
-# build = 2018.06.06.v1.17 - fix #20 & #21
-# build = 2018.09.15.v1.18 - improve logging and new method in PyMISP 2.4.95
-# build = 2018.10.07.v1.19 - improve logging and error handling
-# build = 2018.10.07.v1.20 - use module tempfile
-# build = 2018.10.09.v1.21 - fix pymisp_getioc.py 
-# build = 2018.10.14.v1.22 - custom command mispquery 
-# build = 2018.11.04.v1.23 - mispgetioc directly using MISP API
-# build = 2018.11.04.v1.24 - clean up in field names
-# build = 2018.11.10.v1.25 - mispsight custom search command
 # build = 2018.11.11.v2.01 - major improvements with KV store and multi-value fields
 # build = 2018.11.11.v2.02 - remove TH components
 # build = 2018.11.12.v2.03 - fix
@@ -40,13 +20,13 @@ build = 2018.12.22.v2.10
 
 [ui]
 is_visible = true
-label = App-MISP42
+label = MISP42
 
 [launcher]
 author = Remi Seguy
-description = App for using MISP with Splunk
+description = MISP App for Splunk
 version = 2.0.10
 
 [package]
 id = misp42splunk
- 
+check_for_updates = 0 
