--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -16,7 +16,8 @@ is_configured = 0
 # build = 2018.12.15.v2.08 - switch to MISP API for alert create events
 # build = 2018.12.22.v2.09 - issue #32 & #33
 # build = 2018.12.22.v2.10 - streaming commands NOT distributed
-build = 2018.12.22.v2.10
+# build = 2018.12.26.v2.11 - for splunkbase
+build = 2018.12.26.v2.11
 
 [ui]
 is_visible = true
@@ -25,7 +26,7 @@ label = MISP42
 [launcher]
 author = Remi Seguy
 description = MISP App for Splunk
-version = 2.0.10
+version = 2.0.11
 
 [package]
 id = misp42splunk
