--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -17,7 +17,8 @@ is_configured = 0
 # build = 2018.12.22.v2.09 - issue #32 & #33
 # build = 2018.12.22.v2.10 - streaming commands NOT distributed
 # build = 2018.12.26.v2.11 - for splunkbase
-build = 2018.12.26.v2.11
+# build = 2019.01.03.v2.12 - small fix
+build = 2019.01.03.v2.12
 
 [ui]
 is_visible = true
@@ -26,7 +27,7 @@ label = MISP42
 [launcher]
 author = Remi Seguy
 description = MISP App for Splunk
-version = 2.0.11
+version = 2.0.12
 
 [package]
 id = misp42splunk
