--- a/misp42splunk/default/commands.conf
+++ b/misp42splunk/default/commands.conf
@@ -1,14 +1,17 @@
 [mispgetioc]
 filename = mispgetioc.py
 local = true
+distributed = false
 chunked = true
 
 [mispsearch]
 filename = mispsearch.py
 local = true
+distributed = false
 chunked = true
 
 [mispsight]
 filename = mispsight.py
 chunked = true
+distributed = false
 local = true
