--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -17,8 +17,9 @@ is_configured = 0
 # build = 2018.12.22.v2.09 - issue #32 & #33
 # build = 2018.12.22.v2.10 - streaming commands NOT distributed
 # build = 2018.12.26.v2.11 - for splunkbase
-# build = 2019.01.03.v2.12 - small fix
-build = 2019.01.03.v2.12
+# build = 2019.01.03.v2.12 - small fix 
+# build = 2019.01.10.v2.13 - improve mispgetioc 
+build = 2019.01.10.v2.13
 
 [ui]
 is_visible = true
@@ -27,7 +28,7 @@ label = MISP42
 [launcher]
 author = Remi Seguy
 description = MISP App for Splunk
-version = 2.0.12
+version = 2.0.13
 
 [package]
 id = misp42splunk
