--- a/misp42splunk/default/searchbnf.conf
+++ b/misp42splunk/default/searchbnf.conf
@@ -19,13 +19,17 @@ tags = misp
 
 [mispgetioc-options]
 syntax = ( eventid=<int>(,<int>)* |  last=<int>(d|h|m) | date_from=<string> (date_to=<string>) ) \
-  onlyids=<y/n> category=<csv_string> type=<csv_string> getuuid=<y/n> getorg=<y/n> geteventtag=<y/n> \
+  onlyids=<y/n> category=<csv_string> type=<csv_string> pipesplit=<y/n>\
+  getuuid=<y/n> getorg=<y/n> geteventtag=<y/n> \
   tags=<csv_string>  not_tags=<csv_string> \
   pmisp_url=https://host:port misp_key=misp-authorization-key misp_verifycert=<y/n>
 description = mispgetioc searches in MISP instance (either the one defined in app setup or\
   at misp_url URL with misp_key checking the certificate or not (misp_verifycert).\
   You can filter on 'category' or 'type' of attributes, on attributes having the 'to_ids' flag\
   or specific 'tags' or on contrary not having 'not_tags'.\
+  To split multivalue attributes into 2 fields set boolean pipesplit to True. \
+  For example domain|ip will be split into misp_domain and misp_ip \
+  but misp_type and misp_value will still have the original values \
   You may display the attribuite uuid (getuuid: default = n) or org (getorg: default=n)
 
 ##################
