--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -19,7 +19,8 @@ is_configured = 0
 # build = 2018.12.26.v2.11 - for splunkbase
 # build = 2019.01.03.v2.12 - small fix 
 # build = 2019.01.10.v2.13 - improve mispgetioc 
-build = 2019.01.10.v2.13
+# build = 2019.01.13.v2.14 - support proxy
+build = 2019.01.13.v2.14
 
 [ui]
 is_visible = true
@@ -28,7 +29,7 @@ label = MISP42
 [launcher]
 author = Remi Seguy
 description = MISP App for Splunk
-version = 2.0.13
+version = 2.0.14
 
 [package]
 id = misp42splunk
