--- a/misp42splunk/default/searchbnf.conf
+++ b/misp42splunk/default/searchbnf.conf
@@ -22,7 +22,7 @@ syntax = ( eventid=<int>(,<int>)* |  last=<int>(d|h|m) | date_from=<string> (dat
   onlyids=<y/n> category=<csv_string> type=<csv_string> pipesplit=<y/n>\
   getuuid=<y/n> getorg=<y/n> geteventtag=<y/n> \
   tags=<csv_string>  not_tags=<csv_string> \
-  pmisp_url=https://host:port misp_key=misp-authorization-key misp_verifycert=<y/n>
+  misp_url=https://host:port misp_key=misp-authorization-key misp_verifycert=<y/n>
 description = mispgetioc searches in MISP instance (either the one defined in app setup or\
   at misp_url URL with misp_key checking the certificate or not (misp_verifycert).\
   You can filter on 'category' or 'type' of attributes, on attributes having the 'to_ids' flag\
@@ -79,11 +79,17 @@ syntax = |mispapireport <mispapireport-options>
 shortdesc = mispapireport is a wrapper to call misp api endpoint /attributes/restSearch with the same options as direct calls.
 description = mispapireport searches in MISP instance (either the one defined in app setup or \
   at misp_url URL with misp_key checking the certificate or not (misp_verifycert).\
+  There are 2 request modes \
+  1 - either you set requestmode=param (default) and then you pass additional params \
   You can use almost all available options to build the request\
   i.e "page", "limit", "value", "type", "category", "org", "tags" (and "not_tags"),\
   "date_from", "date_to", "last", "eventid", "uuid", "enforceWarninglist", "to_ids"\
   "deleted", "includeEventUuid", "includeEventTags", "threat_level_id", "eventinfo"\
+  2 - or you set requestmode=json and then you past a complete valid JSON request \
+  using json="JSON request". Some entries will be enforced \
+  "returnFormat": "json" "withAttachments": "false" \
   and it returns a JSON dataset. Dict items are displayed as columns misp_*
+
 example1 = | mispapireport last=100d
 comment1 = retrieve attributes of all events published in last 100 days.
 usage = public
@@ -91,7 +97,8 @@ related = misp
 tags = misp
 
 [mispapireport-options]
-syntax = eventid="<int>(,<int>)*" last=<int>dhm date_from=<string> date_to=<string> to_ids=<y/n> category=CSV_string type=CSV_string\
+syntax = requestmode=<param|json> eventid="<int>(,<int>)*" last=<int>dhm date_from=<string> date_to=<string> \
+to_ids=<y/n> category=CSV_string type=CSV_string\
 tags=CSV_string  not_tags=CSV_string threat_level_id=<int> org=<string> value=<string> eventinfo=<string>\
 limit=<int> page=<int> uuid=<string> enforceWarninglist=<y/n> deleted=<y/n> includeEventUuid=<y/n> includeEventTags=<y/n>\
 misp_url=https://host:port misp_key=misp-authorization-key misp_verifycert=<y/n>
